collapsed modal css fix

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -3559,7 +3559,7 @@ a.close:hover {
         overflow: hidden;
         z-index: 1009;
         height: 26px;
-        padding: 4px 8px;
+        padding: 3px 8px;
         border-top-left-radius: var(--border-radius);
         border-top-right-radius: var(--border-radius);
 
